# example-sp1-wasm-verifier

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: pr.yml
example/json/: fibonacci_groth16_proof.json  fibonacci_plonk_proof.json
example/script/: Cargo.toml
example/script/src/: main.rs
example/wasm_example/: main.js
uniffi-verifier/: Cargo.toml  build.rs
uniffi-verifier/src/: error.rs  lib.rs  verifier.udl
verifier/: Cargo.toml  README.md
verifier/src/: lib.rs
