[workspace]
members = ["verifier", "example/fibonacci-program", "example/script"]
resolver = "2"

[workspace.dependencies]
# sp1-verifier = { version = "5.2.1", default-features = false }
# sp1-sdk = { version = "5.2.1" }
# sp1-zkvm = { version = "5.2.1" }
# sp1-build = { version = "5.2.1" }

# Until the relevant feature is published on crates.io:

sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "9c467b819789f991e5f45cddbdc03d32d2c8043e" }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", rev = "9c467b819789f991e5f45cddbdc03d32d2c8043e" }
sp1-build = { git = "https://github.com/succinctlabs/sp1.git", rev = "9c467b819789f991e5f45cddbdc03d32d2c8043e" }
sp1-verifier = { git = "https://github.com/succinctlabs/sp1.git", rev = "9c467b819789f991e5f45cddbdc03d32d2c8043e", default-features = false }
