[workspace]
members = ["verifier", "uniffi-verifier", "example/fibonacci-program", "example/script"]
resolver = "2"

[workspace.dependencies]
sp1-verifier = { version = "5.2.4", default-features = false }
sp1-sdk = { version = "5.2.4" }
sp1-zkvm = { version = "5.2.4" }
sp1-build = { version = "5.2.4" }
