[workspace]
members = ["verifier", "uniffi-verifier", "example/fibonacci-program", "example/script"]
resolver = "2"

[workspace.dependencies]
sp1-verifier = { version = "6.0.0", default-features = false }
sp1-sdk = { version = "6.0.0" }
sp1-zkvm = { version = "6.0.0" }
sp1-build = { version = "6.0.0" }
