[package]
version = "0.1.0"
name = "example-script"
edition = "2021"

[dependencies]
sp1-sdk = { workspace = true, features = ["unsound"] }
clap = { version = "4.0", features = ["derive"] }
hex = "0.4.3"
serde = "1.0"
serde_json = "1.0"
bincode = "1"
anyhow = "1.0.83"
flate2 = "1.1.2"
tokio = "1.47.1"

[build-dependencies]
sp1-build.workspace = true
